chore: enabling build kit
Signed-off-by: Nicolas Takashi <nicolas.tcs@hotmail.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -58,6 +58,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v4
       with:
+        cache: true
         go-version: '${{ env.golang-version }}'
     - name: Build images
       run: |
