--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -5382,6 +5382,10 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              serviceName:
+                description: ServiceName is the name of the Service resource created
+                  for the PrometheusAgent instance.
+                type: string
               shards:
                 description: "EXPERIMENTAL: Number of shards to distribute targets
                   onto. `spec.replicas` multiplied by `spec.shards` is the total number
@@ -8377,6 +8381,10 @@ spec:
                   Prometheus deployment (their labels match the selector).
                 format: int32
                 type: integer
+              serviceName:
+                description: ServiceName is the name of the Service resource associated
+                  with the Prometheus instance.
+                type: string
               shardStatuses:
                 description: The list has one entry per shard. Each entry provides
                   a summary of the shard status.
