--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '${{ env.golang-version }}'
+          check-latest: true
       - name: Install cosign
         uses: sigstore/cosign-installer@main
       - name: Check the Docker version
