--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: '${{ env.golang-version }}'
+        check-latest: true
     - run: make test-unit
   extended-tests:
     runs-on: ubuntu-latest
@@ -30,4 +31,5 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version: ${{ env.golang-version }}
+        check-latest: true
     - run: make test-long
