--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1013,7 +1013,17 @@
                           "description": "Role of the Kubernetes entities that should be discovered.",
                           "enum": [
                             "Node",
-                            "node"
+                            "node",
+                            "Service",
+                            "service",
+                            "Pod",
+                            "pod",
+                            "Endpoints",
+                            "endpoints",
+                            "EndpointSlice",
+                            "endpointslice",
+                            "Ingress",
+                            "ingress"
                           ],
                           "type": "string"
                         },
@@ -1029,10 +1039,20 @@
                                 "type": "string"
                               },
                               "role": {
-                                "description": "K8SRole is role of the service in Kubernetes. Currently the only supported role is \"Node\".",
+                                "description": "Role is role of the service in Kubernetes.",
                                 "enum": [
                                   "Node",
-                                  "node"
+                                  "node",
+                                  "Service",
+                                  "service",
+                                  "Pod",
+                                  "pod",
+                                  "Endpoints",
+                                  "endpoints",
+                                  "EndpointSlice",
+                                  "endpointslice",
+                                  "Ingress",
+                                  "ingress"
                                 ],
                                 "type": "string"
                               }
