--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -153,7 +153,7 @@
                     "description": "BasicAuth information to use on every scrape request.",
                     "properties": {
                       "password": {
-                        "description": "The secret in the service monitor namespace that contains the password for authentication.",
+                        "description": "`password` specifies a key of a Secret containing the password for authentication.",
                         "properties": {
                           "key": {
                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -175,7 +175,7 @@
                         "x-kubernetes-map-type": "atomic"
                       },
                       "username": {
-                        "description": "The secret in the service monitor namespace that contains the username for authentication.",
+                        "description": "`username` specifies a key of a Secret containing the username for authentication.",
                         "properties": {
                           "key": {
                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -244,7 +244,7 @@
                           "description": "BasicAuth information to authenticate against the Consul Server. More info: https://prometheus.io/docs/operating/configuration/#endpoints",
                           "properties": {
                             "password": {
-                              "description": "The secret in the service monitor namespace that contains the password for authentication.",
+                              "description": "`password` specifies a key of a Secret containing the password for authentication.",
                               "properties": {
                                 "key": {
                                   "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -266,7 +266,7 @@
                               "x-kubernetes-map-type": "atomic"
                             },
                             "username": {
-                              "description": "The secret in the service monitor namespace that contains the username for authentication.",
+                              "description": "`username` specifies a key of a Secret containing the username for authentication.",
                               "properties": {
                                 "key": {
                                   "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -322,7 +322,7 @@
                           "description": "Optional OAuth 2.0 configuration.",
                           "properties": {
                             "clientId": {
-                              "description": "The secret or configmap containing the OAuth2 client id",
+                              "description": "`clientId` specifies a key of a Secret or ConfigMap containing the OAuth2 client's ID.",
                               "properties": {
                                 "configMap": {
                                   "description": "ConfigMap containing data to use for the targets.",
@@ -372,7 +372,7 @@
                               "type": "object"
                             },
                             "clientSecret": {
-                              "description": "The secret containing the OAuth2 client secret",
+                              "description": "`clientSecret` specifies a key of a Secret containing the OAuth2 client's secret.",
                               "properties": {
                                 "key": {
                                   "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -397,18 +397,18 @@
                               "additionalProperties": {
                                 "type": "string"
                               },
-                              "description": "Parameters to append to the token URL",
+                              "description": "`endpointParams` configures the HTTP parameters to append to the token URL.",
                               "type": "object"
                             },
                             "scopes": {
-                              "description": "OAuth2 scopes used for the token request",
+                              "description": "`scopes` defines the OAuth2 scopes used for the token request.",
                               "items": {
                                 "type": "string"
                               },
                               "type": "array"
                             },
                             "tokenUrl": {
-                              "description": "The URL to fetch the token from",
+                              "description": "`tokenURL` configures the URL to fetch the token from.",
                               "minLength": 1,
                               "type": "string"
                             }
@@ -874,7 +874,7 @@
                           "description": "BasicAuth information to authenticate against the target HTTP endpoint. More info: https://prometheus.io/docs/operating/configuration/#endpoints",
                           "properties": {
                             "password": {
-                              "description": "The secret in the service monitor namespace that contains the password for authentication.",
+                              "description": "`password` specifies a key of a Secret containing the password for authentication.",
                               "properties": {
                                 "key": {
                                   "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -896,7 +896,7 @@
                               "x-kubernetes-map-type": "atomic"
                             },
                             "username": {
-                              "description": "The secret in the service monitor namespace that contains the username for authentication.",
+                              "description": "`username` specifies a key of a Secret containing the username for authentication.",
                               "properties": {
                                 "key": {
                                   "description": "The key of the secret to select from.  Must be a valid secret key.",
